# scone

./: .gitignore  Cargo.toml  README.md  flake.nix
glaze/: Cargo.toml  README.md
glaze/resources/shaders/: colored.wgsl  shader.wgsl  vertex_color.wgsl
glaze/src/: lib.rs  pipeline.rs  renderable.rs  renderer.rs  shader.rs  state.rs  vertex.rs
scone/: Cargo.toml  README.md
scone/examples/: windowing.rs
scone/examples/sandbox/: components.rs  main.rs  systems.rs
scone/examples/windowing/: components.rs  main.rs  systems.rs
scone/src/: args.rs  components.rs  engine.rs  lib.rs  renderable.rs  scene.rs  state.rs
scone_ecs/: Cargo.toml  README.md
scone_ecs/src/: component.rs  entity.rs  lib.rs  resource.rs  system.rs  world.rs
