[package]
name = "glaze"
version = "0.0.1"
edition = "2021"
authors = ["Gavin Niederman <gavinniederman@gmail.com>"]
description = "The renderer used in the Scone game engine"
readme = "../README.md"
license = "MIT"
repository = "https://github.com/Gavin-Niederman/scone"
keywords = [
    "game",
    "engine",
    "scone",
    "renderer",
]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
pollster = "0.3.0"
wgpu = "0.15.1"
winit = "0.28.1"
