[package]
name = "glaze"
version = "0.0.1"
edition = "2021"
description = "A simple renderer developed for the Scone game engine"
license = "MIT"
keywords = [
    "game",
    "engine",
    "renderer",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pollster = "0.3.0"
wgpu = "0.15.1"
winit = "0.28.3"
