[package]
name = "scone"
version = "0.1.0"
edition = "2021"
authors = ["Gavin Niederman <gavinniederman@gmail.com>"]
description = "The Scone game gngine"
license = "MIT"
repository = "https://github.com/Gavin-Niederman/scone"
keywords = [
    "game",
    "engine",
    "tick",
    "scone",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
saunter = "0.1.6"
scone-ecs = { path = "../scone_ecs" }
log = "0.4.17"
simplelog = "0.12.0"
winit = "0.27.5"
