[package]
name = "scone"
version = "0.0.1"
edition = "2021"
authors = ["Gavin Niederman <gavinniederman@gmail.com>"]
description = "The Scone game engine"
readme = "./README.md"
license = "MIT"
repository = "https://github.com/Gavin-Niederman/scone"
keywords = [
    "game",
    "engine",
    "tick",
    "scone",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
saunter = "0.1.7"
scone-ecs = { version = "0.0.1", path = "../scone_ecs" }
log = "0.4.17"
simplelog = "0.12.0"
winit = "0.27.5"
