[package]
name = "scone"
version = "0.0.2"
edition = "2021"
authors = ["Gavin Niederman <gavinniederman@gmail.com>"]
description = "The Scone game engine"
readme = "../README.md"
license = "MIT"
repository = "https://github.com/Gavin-Niederman/scone"
keywords = [
    "game",
    "engine",
    "tick",
    "scone",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scone-ecs = { version = "*", path = "../scone_ecs" }
glaze = { version = "*", path = "../glaze" }
saunter = "0.2.0"
log = "0.4.17"
fern = { version = "0.6.1", features = ["colored"] }
chrono = "0.4.23"
winit = "0.28.1"
wgpu = "0.15.1"
clap = { version = "4.1.4", features = ["derive"] }
