[package]
name = "scone-ecs"
version = "0.0.2"
edition = "2021"
authors = ["Gavin Niederman <gavinniederman@gmail.com>"]
description = "The ecs used in Scone"
readme = "../README.md"
license = "MIT"
repository = "https://github.com/Gavin-Niederman/scone"
keywords = [
    "ecs",
    "scone",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.27.5"
saunter = "0.1.7"