[package]
name = "scone-ecs"
version = "0.0.2"
edition = "2021"
authors = ["Gavin Niederman <gavinniederman@gmail.com>"]
description = "The ecs used in Scone"
license = "MIT"
repository = "https://github.com/Gavin-Niederman/scone"
keywords = [
    "game",
    "engine",
    "ecs",
    "scone",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.28.3"
saunter = "0.2.0"